examples/test/testpolicy12181.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12181
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key20: value26
      key37: value26
      key19: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value6
          key30: value7
          key12: value34
      podSelector:
        matchLabels:
          key6: value9
